--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./styles/css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -36,13 +36,15 @@
     <button id="btn-export-gpx">エクスポート</button>
   </div>
 
-  <table id="data-table" class="table table-hover w-100">
+  <table id="data-table" class="table-sm table-hover w-100">
     <thead>
       <tr>
         <th class="chkbox">選択</th>
+        <th class="idx">Idx</th>
         <th class="datetime">日時</th>
         <th class="latitude">緯度</th>
         <th class="longitude">経度</th>
+        <th class="elevation">標高</th>
         <th class="apply">適用</th>
       </tr>
     </thead>
