Commented out the export button.

--- a/index.html
+++ b/index.html
@@ -13,18 +13,8 @@
 
   <div class="container-fluid">
   <h1>GPX Trail Editor</h1>
-
-  <!-- <div id="file-controls">
-    <input type="file" id="upload-gpx-button" accept=".gpx">
-    <button id="export-btn">エクスポート</button>
-  </div> -->
   
   <div id="map"></div>
-  <div id="map-options">
-    <label>
-      <input type="checkbox" id="enable-drag"> 地図上の点をドラッグ＆ドロップで移動
-    </label>
-  </div>
 
   <div id="drop-zone-form" class="drop-zone card p-4">
     <i class="bi bi-cloud-upload"></i>
@@ -32,9 +22,9 @@
     <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
   </div>
 
-  <div id="fm-export-gpx" class="input-group mb-3">
+  <!-- <div id="fm-export-gpx" class="input-group mb-3">
     <button id="btn-export-gpx">エクスポート</button>
-  </div>
+  </div> -->
 
   <table id="data-table" class="table-sm table-hover w-100">
     <thead>
