--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 
   <div class="container-fluid">
   <h1>GPX Trail Editor</h1>
-  
-  <div id="map"></div>
 
-  <div id="drop-zone-form" class="drop-zone card p-4">
-    <i class="bi bi-cloud-upload"></i>
-    <span class="drop-zone-prompt">ここにGPXファイルをドロップまたはクリックして選択</span>
+  <h2 class="d-none">Map</h2>
+
+  <div id="map" class="border shadow-sm mt-4 mb-4"></div>
+
+  <h2 class="d-none">Upload GPX</h2>
+
+  <div id="drop-zone-form" class="drop-zone border shadow-sm p-4 mt-4 mb-4 d-flex flex-column justify-content-center">
+    <i class="bi bi-cloud-upload text-center fs-3"></i>
+    <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
     <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
   </div>
 
