--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 
   <h2 class="d-none">Upload GPX</h2>
 
-  <div id="drop-zone-form" class="drop-zone border shadow-sm p-4 mt-4 mb-4 d-flex flex-column justify-content-center">
-    <i class="bi bi-cloud-upload text-center fs-3"></i>
-    <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
-    <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
+  <div id="drop-zone-form" class="drop-zone border shadow-sm p-4 mt-4 mb-4">
+    <div class="form-inner d-flex flex-column justify-content-center">
+      <i class="bi bi-cloud-upload text-center fs-3"></i>
+      <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
+      <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
+    </div>
   </div>
 
   <!-- <div id="fm-export-gpx" class="input-group mb-3">
