--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   <table id="data-table" class="table-sm table-hover w-100">
     <thead>
       <tr>
-        <th class="chkbox">選択</th>
-        <th class="idx">Idx</th>
+        <th class="chkbox">
+          <input type="checkbox" id="chk-all" class="form-check-input" title="すべてのチェックボックスのオンとオフを切り替えます。" />
+        </th>
+        <th class="idx"></th>
         <th class="datetime">日時</th>
         <th class="latitude">緯度</th>
         <th class="longitude">経度</th>
