--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="container-fluid">
         <div class="navbar-brand" href="#">GPX Trail Editor</div>
         <div class="justify-content-end" id="nav-buttons">
-          <a class="btn btn-sm btn-light" href="javascript:void(0);">Export GPX</a>
-          <a class="btn btn-sm btn-danger" href="javascript:void(0);">Start Over</a>
+          <a id="btn-export-gpx" class="btn btn-sm btn-light" href="javascript:void(0);">Export GPX</a>
+          <a id="btn-start-over" class="btn btn-sm btn-danger" href="javascript:void(0);">Start Over</a>
         </div>
       </div>
     </nav>
