Added max-width to a couple of the table cels. Fixed typos.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
     <div class="container-fluid">
       <h1>GPX Trail Editor</h1>
 
-      <h2 class="d-none">Map</h2>
-
       <h2 class="d-none">Upload GPX</h2>
 
       <div id="drop-zone-form" class="drop-zone border shadow-sm p-4 mt-4 mb-4">
@@ -49,8 +47,9 @@
         </div>
       </div>
 
+      <h2 class="d-none">Map</h2>
       <div id="map" class="border shadow-sm mt-4 mb-4"></div>
-
+  
       <table id="data-table" class="table-sm table-hover w-100">
         <thead>
           <tr>
@@ -60,14 +59,14 @@
             <th class="latitude">緯度</th>
             <th class="longitude">経度</th>
             <th class="elevation">標高</th>
-            <th class="apply">適用</th>
+            <th class="apply"></th>
           </tr>
         </thead>
         <tbody>
           <!-- The table rows will be inserted by JS. -->
         </tbody>
       </table>
-
+  
     </div>
 
   </main>
