--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
       <h2 class="d-none">Map</h2>
       <div id="map" class="border shadow-sm mt-4 mb-4"></div>
   
+      <h2 class="d-none">GPX Details</h2>
+      <div id="data-summary">
+        <div id="total-dist"></div>
+        <div id="total-eveu"></div>
+        <div id="total-eved"></div>
+      </div>
+
       <table id="data-table" class="table-sm table-hover w-100">
         <thead>
           <tr>
