Implemented new functions that show the total up and down elevations.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <h2 class="d-none">GPX Details</h2>
       <div id="data-summary">
         <div id="total-dist"></div>
-        <div id="total-eveu"></div>
-        <div id="total-eved"></div>
+        <div id="total-eleu"></div>
+        <div id="total-eled"></div>
       </div>
 
       <table id="data-table" class="table-sm table-hover w-100">
