Styled the data-summary section.

--- a/index.html
+++ b/index.html
@@ -51,25 +51,33 @@
       <div id="map" class="border shadow-sm mt-4 mb-4"></div>
   
       <h2 class="d-none">GPX Details</h2>
-      <div id="data-summary" class="d-none">
+      <div id="data-summary" class="d-none m-4">
         <div id="total-time">
-          <h3 class="label">GPS Time</h3>
-          <span class="value"></span>
+          <h3 class="label fw-light text-center text-secondary">GPS Time</h3>
+          <div class="desc text-center">
+            <span class="value h3"></span>
+          </div>
         </div>
         <div id="total-dist">
-          <h3 class="label">Distance</h3>
-          <span class="value"></span>
-          <span class="unit">m</span>
+          <h3 class="label fw-light text-center text-secondary">Distance</h3>
+          <div class="desc text-center">
+            <span class="value h3"></span>
+            <span class="unit">m</span>
+          </div>
         </div>
         <div id="total-eleu">
-          <h3 class="label">Up</h3>
-          <span class="value"></span>
-          <span class="unit">m</span>
+          <h3 class="label fw-light text-center text-secondary">Up</h3>
+          <div class="desc text-center">
+            <span class="value h3"></span>
+            <span class="unit">m</span>
+          </div>
         </div>
         <div id="total-eled">
-          <h3 class="label">Down</h3>
-          <span class="value"></span>
-          <span class="unit">m</span>
+          <h3 class="label fw-light text-center text-secondary">Down</h3>
+          <div class="desc text-center">
+            <span class="value h3"></span>
+            <span class="unit">m</span>
+          </div>
         </div>
       </div>
 
