Implemented the operatoin form.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,43 @@
         </div>
       </div>
 
+      <div id="fm-data-table">
+        <form>
+          <div class="row mb-2">
+            <div class="col-sm-2">
+              <label for="fm-op-selector" class="col-form-label">Operaton</label>
+            </div>
+            <div class="col-auto">
+              <select id="fm-op-selector" class="col-sm-10 form-select" aria-label="What do you want to do?">
+                <option selected>----</option>
+                <option value="1">Clear all dates and times</option>
+                <option value="2">Clear unckecked dates and times</option>
+                <option value="3">Shift dates and times</option>
+              </select>
+            </div>
+            <div class="col-auto">
+              <input type="number" id="fm-ts-input" class="form-control" placeholder="In seconds" value="0" />
+            </div>
+            <div class="col-auto">
+              <button id="fm-go-button" class="btn btn-primary" disabled>Go</button>
+            </div>
+          </div>
+          <!-- <div class="row mb-2">
+            <div class="col-sm-2">
+              <label for="time-shift" class="col-form-label">Time Shift</label>
+            </div>
+            <div class="col-auto">
+              <input type="number" id="time-shift" class="form-control" placeholder="In seconds" value="0" />
+            </div>
+          </div> -->
+          <!-- <div class="row mb-2">
+            <div class="col-sm-10 offset-sm-2">
+              <button class="btn btn-primary" disabled>Go</button>
+            </div>
+          </div> -->
+        </form>
+      </div>
+
       <table id="data-table" class="table-sm table-hover w-100">
         <thead>
           <tr>
