Added clearCheckedDateTime function

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <select id="fm-op-selector" class="col-sm-10 form-select" aria-label="What do you want to do?">
                 <option value="" selected>----</option>
                 <option value="clear-all-datetime">Clear all dates and times</option>
+                <option value="clear-checked-datetime">Clear checked dates and times</option>
                 <option value="clear-unchecked-datetime">Clear unckecked dates and times</option>
                 <option value="shift-datetime">Shift dates and times</option>
               </select>
