Made some changes so that the datetime-local input would be able to handle the seconds properly.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <div id="fm-data-table">
+      <div id="fm-data-table" class="mt-4 mb-4">
         <form>
           <div class="row mb-2">
             <div class="col-auto col-label">
