Removed an example map image. Modified the structure of the HTML document.

--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
 
       <h2 class="d-none">Upload GPX</h2>
 
-      <div id="drop-zone-form" class="drop-zone border shadow-sm p-4 mt-4 mb-4">
-        <div class="form-inner d-flex flex-column justify-content-center">
+      <div id="drop-zone">
+        <div id="drop-zone-form" class="mt-4 mb-4 p-4 border shadow-sm d-flex flex-column justify-content-center">
           <i class="bi bi-cloud-upload text-center fs-3"></i>
           <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
           <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
         </div>
-        <h2 class="d-none">Map</h2>
-        <div id="prev-map" class="border shadow-sm mt-4 mb-4"></div>
-      </div>
+      
 
       <h2 class="d-none">Map</h2>
       <div id="map" class="border shadow-sm mt-4 mb-4"></div>
+
+    </div>
 
       <h2 class="d-none">GPX Details</h2>
       <div id="data-summary" class="d-none m-4">
