Modified the HTML structure again.

--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
           <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
           <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
         </div>
-      
+      </div>
 
       <h2 class="d-none">Map</h2>
       <div id="map" class="border shadow-sm mt-4 mb-4"></div>
-
-    </div>
 
       <h2 class="d-none">GPX Details</h2>
       <div id="data-summary" class="d-none m-4">
@@ -97,7 +95,7 @@
         </div>
       </div>
 
-      <div id="fm-data-table" class="mt-4 mb-4">
+      <div id="operation-form" class="mt-4 mb-4 d-none">
         <form>
           <div class="row mb-2">
             <div class="col-auto col-label">
