--- a/index.html
+++ b/index.html
@@ -136,9 +136,10 @@
       <table id="data-table" class="table-sm table-hover w-100">
         <thead>
           <tr>
-            <th class="chkbox"></th>
             <th class="idx"></th>
+            <th class="chkbox"></th>
             <th class="datetime">日時</th>
+            <th class="eraser"></th>
             <th class="latitude">緯度</th>
             <th class="longitude">経度</th>
             <th class="elevation">標高</th>
