Implemented functions that interpolate the dates and times for the intermediate points that don't have specific dates and times.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                 <option value="clear-all-datetime">Clear all dates and times</option>
                 <option value="clear-checked-datetime">Clear checked dates and times</option>
                 <option value="clear-unchecked-datetime">Clear unckecked dates and times</option>
+                <option value="fill-empty-datetime">Fill empty dates and times</option>
                 <option value="shift-datetime">Shift dates and times</option>
               </select>
             </div>
