--- a/index.html
+++ b/index.html
@@ -51,50 +51,6 @@
       <h2 class="d-none">Map</h2>
       <div id="map" class="border shadow-sm mt-4 mb-4"></div>
 
-      <h2 class="d-none">GPX Details</h2>
-      <div id="data-summary" class="d-none m-4">
-        <div id="total-gpx-time">
-          <h3 class="label fw-light text-center text-secondary">
-            <i class="bi bi-stopwatch"></i>
-            <span>GPS Time</span>
-          </h3>
-          <div class="desc text-center">
-            <span class="value h3"></span>
-          </div>
-        </div>
-
-        <div id="total-dist">
-          <h3 class="label fw-light text-center text-secondary">
-            <i class="bi bi-person-walking"></i>
-            <span>Distance</span>
-            </h3>
-          <div class="desc text-center">
-            <span class="value h3"></span>
-            <span class="unit">m</span>
-          </div>
-        </div>
-        <div id="total-eleu">
-          <h3 class="label fw-light text-center text-secondary">
-            <i class="bi bi-arrow-up-right"></i>
-            <span>Up</span>
-          </h3>
-          <div class="desc text-center">
-            <span class="value h3"></span>
-            <span class="unit">m</span>
-          </div>
-        </div>
-        <div id="total-eled">
-          <h3 class="label fw-light text-center text-secondary">
-            <i class="bi bi-arrow-down-right"></i>
-            <span>Down</span>
-          </h3>
-          <div class="desc text-center">
-            <span class="value h3"></span>
-            <span class="unit">m</span>
-          </div>
-        </div>
-      </div>
-
       <div id="operation-form" class="mt-4 mb-4 d-none">
         <form>
           <div class="row mb-2">
@@ -118,41 +74,76 @@
               <a id="fm-go-button" class="btn btn-light border disabled text-black-50">Go</a>
             </div>
           </div>
-          <!-- <div class="row mb-2">
-            <div class="col-sm-2">
-              <label for="time-shift" class="col-form-label">Time Shift</label>
-            </div>
-            <div class="col-auto">
-              <input type="number" id="time-shift" class="form-control" placeholder="In seconds" value="0" />
-            </div>
-          </div> -->
-          <!-- <div class="row mb-2">
-            <div class="col-sm-10 offset-sm-2">
-              <button class="btn btn-primary" disabled>Go</button>
-            </div>
-          </div> -->
         </form>
       </div>
 
-      <table id="data-table" class="table-sm table-hover w-100">
-        <thead>
-          <tr>
-            <th class="chkbox"></th>
-            <th class="idx"></th>
-            <th class="datetime">日時</th>
-            <th class="eraser"></th>
-            <th class="latitude">緯度</th>
-            <th class="longitude">経度</th>
-            <th class="elevation">標高</th>
-            <th class="apply"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- The table rows will be inserted by JS. -->
-        </tbody>
-      </table>
+      <div id="data-display">
+
+        <h2 class="d-none">GPX Details</h2>
+        <div id="data-summary" class="d-none m-4">
+          <div id="total-gpx-time">
+            <h3 class="label fw-light text-center text-secondary">
+              <i class="bi bi-stopwatch"></i>
+              <span>GPS Time</span>
+            </h3>
+            <div class="desc text-center">
+              <span class="value h3"></span>
+            </div>
+          </div>
+
+          <div id="total-dist">
+            <h3 class="label fw-light text-center text-secondary">
+              <i class="bi bi-person-walking"></i>
+              <span>Distance</span>
+              </h3>
+            <div class="desc text-center">
+              <span class="value h3"></span>
+              <span class="unit">m</span>
+            </div>
+          </div>
+          <div id="total-eleu">
+            <h3 class="label fw-light text-center text-secondary">
+              <i class="bi bi-arrow-up-right"></i>
+              <span>Up</span>
+            </h3>
+            <div class="desc text-center">
+              <span class="value h3"></span>
+              <span class="unit">m</span>
+            </div>
+          </div>
+          <div id="total-eled">
+            <h3 class="label fw-light text-center text-secondary">
+              <i class="bi bi-arrow-down-right"></i>
+              <span>Down</span>
+            </h3>
+            <div class="desc text-center">
+              <span class="value h3"></span>
+              <span class="unit">m</span>
+            </div>
+          </div>
+        </div>
+
+        <table id="data-table" class="table-sm table-hover w-100">
+          <thead>
+            <tr>
+              <th class="chkbox"></th>
+              <th class="idx"></th>
+              <th class="datetime">日時</th>
+              <th class="eraser"></th>
+              <th class="latitude">緯度</th>
+              <th class="longitude">経度</th>
+              <th class="elevation">標高</th>
+              <th class="apply"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- The table rows will be inserted by JS. -->
+          </tbody>
+        </table>
+
+      </div><!-- #data-display -->
   
-    </div>
+    </div><!-- .container-fluid -->
 
   </main>
 
