Renamed the constants defined in the GpxTrailEditor name space.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div id="data-display">
 
         <h2 class="d-none">GPX Details</h2>
-        <div id="data-summary" class="d-none m-4">
+        <div id="data-summary" class="d-none mt-4 mb-4 p-4 bg-light">
           <div id="total-gpx-time">
             <h3 class="label fw-light text-center text-secondary">
               <i class="bi bi-stopwatch"></i>
