Revised the functions that calculated the totals.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <span class="unit">m</span>
             </div>
           </div>
-          <div id="total-eleu">
+          <div id="total-ascent">
             <h3 class="label fw-light text-center text-secondary">
               <i class="bi bi-arrow-up-right"></i>
               <span>Up</span>
@@ -111,7 +111,7 @@
               <span class="unit">m</span>
             </div>
           </div>
-          <div id="total-eled">
+          <div id="total-descent">
             <h3 class="label fw-light text-center text-secondary">
               <i class="bi bi-arrow-down-right"></i>
               <span>Down</span>
