Added showSummary function.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
         </div>
 
-        <table id="data-table" class="table-sm table-hover w-100">
+        <table id="data-table" class="table-sm table-hover w-100 d-none">
           <thead>
             <tr>
               <th class="chkbox"></th>
