Implemented scroll-to-top button

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
 
   </main>
 
+  <button type="button" id="scroll-to-top" class="btn btn-dark btn-floating btn-lg" onclick="GpxTrailEditor.scrollToTop()">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+
   <!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="./js/main.js"></script>
