Implemented a function for exporting the data as a gpx file.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <header>
-    <nav class="navbar fixed-top bg-dark border-bottom border-body" data-bs-theme="dark">
+    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
         <div class="navbar-brand" href="#">GPX Trail Editor</div>
         <div class="justify-content-end" id="nav-buttons">
@@ -36,7 +36,7 @@
   <main>
 
     <div class="container-fluid">
-      <h1>GPX Trail Editor</h1>
+      <h1 class="d-none">GPX Trail Editor</h1>
 
       <h2 class="d-none">Upload GPX</h2>
 
