Fixed some issues related to clearing dates and times.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <th class="latitude">緯度</th>
             <th class="longitude">経度</th>
             <th class="elevation">標高</th>
-            <th class="apply"></th>
+            <!-- <th class="apply"></th> -->
           </tr>
         </thead>
         <tbody>
