Added the operation icons to the data-table header.

--- a/index.html
+++ b/index.html
@@ -121,11 +121,50 @@
           <tr>
             <th class="chkbox"></th>
             <th class="idx"></th>
-            <th class="datetime">日時</th>
+            <th class="datetime">
+              <div class="th-content">
+                <span class="label">日時</span>
+                <span class="op text-secondary fw-light">
+                  <i class="bi bi-eraser-fill"></i>
+                  <a href="javascript:void(0)" class="bi bi-asterisk"></a>
+                  <a href="javascript:void(0)" class="bi bi-square"></a>
+                  <a href="javascript:void(0)" class="bi bi-check-square"></a>
+                </span>
+              </th>
             <th class="eraser"></th>
-            <th class="latitude">緯度</th>
-            <th class="longitude">経度</th>
-            <th class="elevation">標高</th>
+            <th class="latitude">
+              <div class="th-content">
+                <span class="label">緯度</span>
+                <span class="op text-secondary fw-light">
+                  <i class="bi bi-eraser-fill"></i>
+                  <a href="javascript:void(0)" class="bi bi-asterisk"></a>
+                  <a href="javascript:void(0)" class="bi bi-square"></a>
+                  <a href="javascript:void(0)" class="bi bi-check-square"></a>
+                </span>
+              </div>
+            </th>
+            <th class="longitude">
+              <div class="th-content">
+                <span class="label">経度</span>
+                <span class="op text-secondary fw-light">
+                  <i class="bi bi-eraser-fill"></i>
+                  <a href="javascript:void(0)" class="bi bi-asterisk"></a>
+                  <a href="javascript:void(0)" class="bi bi-square"></a>
+                  <a href="javascript:void(0)" class="bi bi-check-square"></a>
+                </span>
+              </div>
+            </th>
+            <th class="elevation">
+              <div class="th-content">
+                <span class="label">標高</span>
+                <span class="op text-secondary fw-light">
+                  <i class="bi bi-eraser-fill"></i>
+                  <a href="javascript:void(0)" class="bi bi-asterisk"></a>
+                  <a href="javascript:void(0)" class="bi bi-square"></a>
+                  <a href="javascript:void(0)" class="bi bi-check-square"></a>
+                </span>
+              </div>
+            </th>
             <!-- <th class="apply"></th> -->
           </tr>
         </thead>
