--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                 <span class="label">日時</span>
                 <span class="op text-secondary fw-light">
                   <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="erase-all bi bi-asterisk" data-op-name="erase-all"></a>
-                  <a href="javascript:void(0)" class="erase-checked bi bi-check-square" data-op-name="erase-checked"></a>
-                  <a href="javascript:void(0)" class="erase-unchecked bi bi-square" data-op-name="erase-unchecked"></a>
+                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
                 </span>
               </th>
             <th class="eraser"></th>
@@ -137,9 +137,9 @@
                 <span class="label">緯度</span>
                 <span class="op text-secondary fw-light">
                   <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="erase-all bi bi-asterisk" data-op-name="erase-all"></a>
-                  <a href="javascript:void(0)" class="erase-checked bi bi-check-square" data-op-name="erase-checked"></a>
-                  <a href="javascript:void(0)" class="erase-unchecked bi bi-square" data-op-name="erase-unchecked"></a>
+                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
                 </span>
               </div>
             </th>
@@ -148,9 +148,9 @@
                 <span class="label">経度</span>
                 <span class="op text-secondary fw-light">
                   <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="erase-all bi bi-asterisk" data-op-name="erase-all"></a>
-                  <a href="javascript:void(0)" class="erase-checked bi bi-check-square" data-op-name="erase-checked"></a>
-                  <a href="javascript:void(0)" class="erase-unchecked bi bi-square" data-op-name="erase-unchecked"></a>
+                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
                 </span>
               </div>
             </th>
@@ -159,9 +159,9 @@
                 <span class="label">標高</span>
                 <span class="op text-secondary fw-light">
                   <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="erase-all bi bi-asterisk" data-op-name="erase-all"></a>
-                  <a href="javascript:void(0)" class="erase-checked bi bi-check-square" data-op-name="erase-checked"></a>
-                  <a href="javascript:void(0)" class="erase-unchecked bi bi-square" data-op-name="erase-unchecked"></a>
+                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
+                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
                 </span>
               </div>
             </th>
