--- a/index.html
+++ b/index.html
@@ -119,50 +119,80 @@
       <table id="data-table" class="table-sm table-hover w-100 d-none">
         <thead>
           <tr>
-            <th class="chkbox"></th>
+            <th class="chkbox align-middle">
+              <input type="checkbox" id="chk-all" class="form-check-input" data-bs-toggle="tooltip" data-bs-placement="top" title="すべての行のチェックボックスの ON と OFF を切り替えます。" />
+            </th>
             <th class="idx"></th>
             <th class="datetime">
               <div class="th-content">
                 <span class="label">日時</span>
-                <span class="op text-secondary fw-light">
-                  <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
-                </span>
+                <div class="op dropdown fw-light">
+                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-eraser-fill"></i>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-all">すべての行をクリア
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked">チェックされた項目を消去
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    </a></li>
+                  </ul>
+                </div>
               </th>
             <th class="eraser"></th>
             <th class="latitude">
               <div class="th-content">
                 <span class="label">緯度</span>
-                <span class="op text-secondary fw-light">
-                  <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
-                </span>
+                <div class="op dropdown fw-light">
+                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-eraser-fill"></i>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-all">すべての行をクリア
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked">チェックされた項目を消去
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    </a></li>
+                  </ul>
+                </div>
               </div>
             </th>
             <th class="longitude">
               <div class="th-content">
                 <span class="label">経度</span>
-                <span class="op text-secondary fw-light">
-                  <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
-                </span>
+                <div class="op dropdown fw-light">
+                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-eraser-fill"></i>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-all">すべての行をクリア
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked">チェックされた項目を消去
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    </a></li>
+                  </ul>
+                </div>
               </div>
             </th>
             <th class="elevation">
               <div class="th-content">
                 <span class="label">標高</span>
-                <span class="op text-secondary fw-light">
-                  <i class="bi bi-eraser-fill"></i>
-                  <a href="javascript:void(0)" class="clear-all bi bi-asterisk" data-op-name="clear-all" title="すべてのテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-checked bi bi-check-square" data-op-name="clear-checked" title="チェックされた行のテキストボックスの内容をクリアします。"></a>
-                  <a href="javascript:void(0)" class="clear-unchecked bi bi-square" data-op-name="clear-unchecked" title="チェックされていない行のテキストボックスの内容をクリアします。"></a>
-                </span>
+                <div class="op dropdown fw-light">
+                  <button class="btn btn-sm btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-eraser-fill"></i>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行をクリア
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked">チェックされた項目を消去
+                    </a></li>
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    </a></li>
+                  </ul>
+                </div>
               </div>
             </th>
             <!-- <th class="apply"></th> -->
@@ -191,6 +221,7 @@
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="./js/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
