--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
         <button id="go-button" class="btn btn-secondary disabled">実行</button>
       </div>
 
-      <table id="data-table" class="table-sm table-hover w-100 d-none">
+      <table id="data-table" class="table table-sm table-borderless table-hover w-100 d-none">
         <thead>
           <tr>
             <th class="chkbox align-middle">
-              <input type="checkbox" id="chk-all" class="form-check-input" data-bs-toggle="tooltip" data-bs-placement="top" title="すべての行のチェックボックスの ON と OFF を切り替えます。" />
+              <input type="checkbox" id="chk-all" class="form-check-input" title="すべての行のチェックボックスの ON と OFF を切り替えます。" />
             </th>
-            <th class="idx"></th>
+            <th class="idx align-middle"></th>
             <th class="datetime">
               <div class="th-content">
                 <span class="label">日時</span>
@@ -131,11 +131,11 @@
                     <i class="bi bi-eraser-fill"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-all">すべての行をクリア
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-all">すべての行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked">チェックされた項目を消去
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-checked">チェックされた行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    <li><a class="dropdown-item" data-target-name="datetime" data-op-name="clear-unchecked">チェックされていない行を消去
                     </a></li>
                   </ul>
                 </div>
@@ -149,11 +149,11 @@
                     <i class="bi bi-eraser-fill"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-all">すべての行をクリア
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-all">すべての行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked">チェックされた項目を消去
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-checked">チェックされた行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    <li><a class="dropdown-item" data-target-name="latitude" data-op-name="clear-unchecked">チェックされていない行を消去
                     </a></li>
                   </ul>
                 </div>
@@ -167,11 +167,11 @@
                     <i class="bi bi-eraser-fill"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-all">すべての行をクリア
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-all">すべての行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked">チェックされた項目を消去
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-checked">チェックされた行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    <li><a class="dropdown-item" data-target-name="longitude" data-op-name="clear-unchecked">チェックされていない行を消去
                     </a></li>
                   </ul>
                 </div>
@@ -185,11 +185,11 @@
                     <i class="bi bi-eraser-fill"></i>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行をクリア
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-all">すべての行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked">チェックされた項目を消去
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-checked">チェックされた行を消去
                     </a></li>
-                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない項目を消去
+                    <li><a class="dropdown-item" data-target-name="elevation" data-op-name="clear-unchecked">チェックされていない行を消去
                     </a></li>
                   </ul>
                 </div>
@@ -198,7 +198,7 @@
             <!-- <th class="apply"></th> -->
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
           <!-- The table rows will be inserted by JS. -->
         </tbody>
       </table>
