--- a/index.html
+++ b/index.html
@@ -41,22 +41,25 @@
 
       <h2 class="d-none">Upload GPX</h2>
 
-      <div id="drop-zone">
-        <div id="drop-zone-form" class="mt-3 mb-3 p-3 border rounded d-flex flex-column justify-content-center">
-          <i class="bi bi-cloud-upload text-center fs-3"></i>
-          <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
-          <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
+      <div id="drop-zone" data-was-file-dropped="false">
+
+          <div id="drop-zone-form" class="mt-3 mb-3 p-3 border rounded d-flex flex-column justify-content-center">
+            <i class="bi bi-cloud-upload text-center fs-3"></i>
+            <span class="drop-zone-prompt text-center">ここにGPXファイルをドロップまたはクリックして選択</span>
+            <input type="file" id="upload-gpx-fileinput" class="d-none" accept=".gpx" area-hidden="true">
+          </div>
+        
+
+        <div id="log-name-form" class="input-group mt-3 mb-3 d-none">
+          <label class="input-group-text" for="log-name-input">タイトル</label>
+          <input id="log-name-input" type="text" class="form-control" />
+          <button id="apply-name-button" class="btn btn-secondary" disabled>適用</button>
         </div>
-      </div>
 
-      <div id="log-name-form" class="input-group mt-3 mb-3 d-none">
-        <label class="input-group-text" for="log-name-input">タイトル</label>
-        <input id="log-name-input" type="text" class="form-control" />
-        <button id="apply-name-button" class="btn btn-secondary" disabled>適用</button>
-      </div>
+        <h2 class="d-none">Map</h2>
+        <div id="map" class="border rounded mt-3 mb-3"></div>
 
-      <h2 class="d-none">Map</h2>
-      <div id="map" class="border rounded mt-3 mb-3"></div>
+      </div>
 
       <h2 class="d-none">GPX Details</h2>
       <div id="data-summary" class="d-none mt-3 mb-3 p-3 rounded">
